CE: Added request body template support for REST API call node